# ladybug-smallkg-scripts

./: README.md  create_duckdb.py  create_small_kgs_dataset.py  pyproject.toml
